# testing-distsys-devconf26

./: Makefile  README.md  mbt-story.md  spec-story.md
dns-control-plane-lab/: .gitignore  AGENTS.md  Makefile  PROMPT.md  README.md  pyproject.toml
dns-control-plane-lab/dns_control_plane/: acme_cloud.py  constants.py  deployer.py  mbt_harness.py  models.py  planner.py  wormhole53.py
dns-control-plane-lab/s3-persistence/: README.md
dns-control-plane-lab/tests/: test_race_outage_poc.py  test_service_smoke.py  test_wormhole53.py
mbt/: README.md  test_dns_control_plane_itf_replay.py  trace_parser.py
spec/: README.md  defs.py  dns.py  dns_balancer.py  pyproject.toml  visualize_dns_trace.py
spec/tests/: test_visualize_dns_trace.py
